--- a/app/src/main/res/layout/fragment_profile_attendee.xml
+++ b/app/src/main/res/layout/fragment_profile_attendee.xml
@@ -32,11 +32,11 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageViewAttendeeProfileImage" />
 
     <TextView
-        android:id="@+id/textName"
+        android:id="@+id/usernameAttendee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Name"
+        android:text="No username"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,14 +54,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textName"
-        app:layout_constraintVertical_bias="0.056" />
+        app:layout_constraintTop_toBottomOf="@+id/usernameAttendee"
+        app:layout_constraintVertical_bias="0.029" />
+
+    <TextView
+        android:id="@+id/descriptionAttendee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="description"
+        android:textColor="#AFABAB"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailAttendee"
+        app:layout_constraintVertical_bias="0.029" />
 
     <Button
         android:id="@+id/openSettings"
         android:layout_width="145dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="20dp"
         android:text="Settings"
         app:layout_constraintBottom_toTopOf="@+id/LOGOUTBUTTONATTENDEE"
         app:layout_constraintEnd_toEndOf="parent"
