--- a/app/src/main/res/layout/fragment_event_create.xml
+++ b/app/src/main/res/layout/fragment_event_create.xml
@@ -95,102 +95,110 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingBottom="2dp">
 
         <EditText
             android:id="@+id/idEdtEventName"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
+            android:layout_width="250dp"
+            android:layout_height="37dp"
+            android:layout_marginTop="4dp"
             android:background="#9A8FAF"
             android:hint="@string/Enter_Event_name"
             android:imeActionLabel="@string/action_sign_in_short"
             android:paddingStart="10dp"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="15dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
 
         <EditText
             android:id="@+id/idEdtEventLocation"
-            android:layout_width="300dp"
+            android:layout_width="250dp"
             android:layout_height="40dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:background="#9A8FAF"
             android:hint="@string/Enter_Event_location"
             android:paddingStart="10dp"
             android:paddingTop="10dp"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idEdtEventName" />
 
         <EditText
-            android:id="@+id/idEdtEventDuration"
-            android:layout_width="300dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="5dp"
-            android:background="#9A8FAF"
-            android:hint="@string/Enter_Event_duration"
-            android:paddingStart="10dp"
-            android:selectAllOnFocus="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/idEdtEventLocation" />
-
-        <EditText
             android:id="@+id/idEdtEventCapacity"
-            android:layout_width="300dp"
+            android:layout_width="250dp"
             android:layout_height="40dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:background="#9A8FAF"
             android:hint="@string/Enter_Event_capacity"
             android:paddingStart="10dp"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idEdtEventDuration" />
 
         <EditText
             android:id="@+id/idEdtEventDate"
-            android:layout_width="300dp"
+            android:layout_width="250dp"
             android:layout_height="40dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:background="#9A8FAF"
             android:hint="@string/Enter_Event_date"
             android:paddingStart="10dp"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idEdtEventCapacity" />
 
         <EditText
             android:id="@+id/idEdtEventDescription"
-            android:layout_width="300dp"
+            android:layout_width="250dp"
             android:layout_height="40dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:background="#9A8FAF"
             android:hint="@string/Enter_Event_description"
             android:paddingStart="10dp"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idEdtEventDate" />
 
+
         <EditText
             android:id="@+id/linkPaid"
-            android:layout_width="300dp"
+            android:layout_width="250dp"
             android:layout_height="40dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="4dp"
             android:background="#9A8FAF"
             android:hint="@string/event_link"
             android:paddingStart="10dp"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idEdtEventDescription" />
 
+        <EditText
+            android:id="@+id/idEdtEventDuration"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="4dp"
+            android:background="#9A8FAF"
+            android:hint="@string/Enter_Event_duration"
+            android:paddingStart="10dp"
+            android:selectAllOnFocus="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.492"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/idEdtEventLocation" />
 
         <Button
             android:id="@+id/idBtnSubmitEvent"
