--- a/app/src/main/res/layout/fragment_my_events.xml
+++ b/app/src/main/res/layout/fragment_my_events.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_with_stars"
-    tools:context=".MyEventsFragment">
+    tools:context=".MyEventsFragmentOrganiser">
 
 </FrameLayout>
