--- a/app/src/main/res/layout/fragment_profile_organiser.xml
+++ b/app/src/main/res/layout/fragment_profile_organiser.xml
@@ -92,7 +92,7 @@
         android:layout_height="48dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="108dp"
-        android:text="Log out"
+        android:text="Sign out"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deleteAccountOrganiserBtn"
         app:layout_constraintHorizontal_bias="0.382"
