--- a/app/src/main/res/layout/fragment_profile_organiser.xml
+++ b/app/src/main/res/layout/fragment_profile_organiser.xml
@@ -8,41 +8,16 @@
     android:background="@drawable/bg_with_stars"
     tools:context=".ProfileOrganiserFragment">
 
-
-    <TextView
-        android:id="@+id/textNameOrganisor"
-        android:layout_width="57dp"
-        android:layout_height="29dp"
-        android:layout_marginTop="5dp"
-        android:text="Name"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewOrganiserProfileImage" />
-
-
-    <Button
-        android:id="@+id/openSettingsOrganiser"
-        android:layout_width="145dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="72dp"
-        android:text="Settings"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailOrganiser" />
-
     <ImageView
         android:id="@+id/imageViewOrganiserProfileImage"
         android:layout_width="220dp"
         android:layout_height="220dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="68dp"
         android:background="@drawable/circle_background"
         android:clipToOutline="true"
         android:scaleType="centerCrop"
         android:src="@drawable/profileicon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -73,12 +48,11 @@
         android:id="@+id/emailOrganiser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="email@organiser.com"
         android:textColor="#AFABAB"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/usernameOrganiser"
         app:layout_constraintVertical_bias="0.029" />
@@ -97,7 +71,7 @@
         app:layout_constraintVertical_bias="0.029" />
 
     <Button
-        android:id="@+id/openSettings"
+        android:id="@+id/openSettingsOrganiser"
         android:layout_width="145dp"
         android:layout_height="48dp"
         android:layout_marginBottom="20dp"
@@ -113,16 +87,13 @@
         android:layout_width="145dp"
         android:layout_height="48dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="83dp"
         android:layout_marginBottom="108dp"
         android:backgroundTint="#EC4646"
         android:text="Delete account"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/LOGOUTBUTTONORGANISER"
-        app:layout_constraintTop_toBottomOf="@+id/openSettingsOrganiser"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/LOGOUTBUTTONORGANISER" />
 
     <Button
         android:id="@+id/LOGOUTBUTTONORGANISER"
@@ -134,8 +105,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deleteAccountOrganiserBtn"
         app:layout_constraintHorizontal_bias="0.382"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/openSettingsOrganiser"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
