--- a/app/src/main/res/layout/fragment_profile_organiser.xml
+++ b/app/src/main/res/layout/fragment_profile_organiser.xml
@@ -8,30 +8,6 @@
     android:background="@drawable/bg_with_stars"
     tools:context=".ProfileOrganiserFragment">
 
-
-    <TextView
-        android:id="@+id/textNameOrganisor"
-        android:layout_width="57dp"
-        android:layout_height="29dp"
-        android:layout_marginTop="5dp"
-        android:text="Name"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewOrganiserProfileImage" />
-
-
-    <Button
-        android:id="@+id/openSettingsOrganiser"
-        android:layout_width="145dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="72dp"
-        android:text="Settings"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailOrganiser" />
-
     <ImageView
         android:id="@+id/imageViewOrganiserProfileImage"
         android:layout_width="220dp"
@@ -56,6 +32,18 @@
         app:layout_constraintEnd_toEndOf="@+id/imageViewOrganiserProfileImage"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewOrganiserProfileImage" />
 
+    <TextView
+        android:id="@+id/usernameOrganiser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="No username"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewOrganiserProfileImage" />
 
     <TextView
         android:id="@+id/emailOrganiser"
@@ -65,10 +53,36 @@
         android:text="email@organiser.com"
         android:textColor="#AFABAB"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textNameOrganisor" />
+        app:layout_constraintTop_toBottomOf="@+id/usernameOrganiser"
+        app:layout_constraintVertical_bias="0.029" />
+
+    <TextView
+        android:id="@+id/descriptionOrganiser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="description"
+        android:textColor="#AFABAB"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailOrganiser"
+        app:layout_constraintVertical_bias="0.029" />
+
+    <Button
+        android:id="@+id/openSettingsOrganiser"
+        android:layout_width="145dp"
+        android:layout_height="48dp"
+        android:layout_marginBottom="20dp"
+        android:text="Settings"
+        app:layout_constraintBottom_toTopOf="@+id/LOGOUTBUTTONORGANISER"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailOrganiser"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/deleteAccountOrganiserBtn"
@@ -82,9 +96,7 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/LOGOUTBUTTONORGANISER"
-        app:layout_constraintTop_toBottomOf="@+id/openSettingsOrganiser"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/LOGOUTBUTTONORGANISER" />
 
     <Button
         android:id="@+id/LOGOUTBUTTONORGANISER"
@@ -96,8 +108,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deleteAccountOrganiserBtn"
         app:layout_constraintHorizontal_bias="0.382"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/openSettingsOrganiser"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
