--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,7 @@
                 android:layout_height="50dp"
                 android:background="#9A8FAF"
                 android:hint="@string/prompt_email"
+                android:paddingStart="10dp"
                 android:inputType="textEmailAddress"
                 android:selectAllOnFocus="true"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -53,6 +54,7 @@
                 android:layout_marginTop="20dp"
                 android:background="#9A8FAF"
                 android:hint="@string/prompt_password"
+                android:paddingStart="10dp"
                 android:imeActionLabel="@string/action_sign_in_short"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
