--- a/app/src/main/res/layout/activity_settings_attendee.xml
+++ b/app/src/main/res/layout/activity_settings_attendee.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/bg_with_stars"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsAttendee">
+    tools:context=".AttendeeActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -109,10 +109,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/textViewNoti"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="39dp"
             android:layout_marginBottom="108dp"
-            android:text="Back"
+            android:onClick="openGPSsettings"
+            android:text="GPS settings"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
