--- a/app/src/main/res/layout/fragment_my_event_organizer.xml
+++ b/app/src/main/res/layout/fragment_my_event_organizer.xml
@@ -13,9 +13,12 @@
         android:id="@+id/editEvent"
         android:layout_width="136dp"
         android:layout_height="48dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_gravity="center"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="78dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="480dp"
+        android:layout_marginEnd="139dp"
         android:text="Edit" />
 </RelativeLayout>
