--- a/app/src/main/res/layout-land/fragment_event_create.xml
+++ b/app/src/main/res/layout-land/fragment_event_create.xml
@@ -3,162 +3,224 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
+    android:background="@drawable/bg_with_stars"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2C1854"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".fragments.EventCreateFragment"
-    tools:layout_editor_absoluteX="172dp"
-    tools:layout_editor_absoluteY="-13dp">
+    tools:context=".fragments.EventCreateFragment">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewImage"
+        android:layout_width="329dp"
+        android:layout_height="205dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="4dp"
+        app:cardBackgroundColor="#36FFFFFF"
+        app:cardCornerRadius="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/cover_image"
+            android:layout_width="308dp"
+            android:layout_height="186dp"
+            android:layout_above="@+id/button_capture"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/text_margin"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            android:textAppearance="?attr/textAppearanceListItem"
+            app:layout_constraintBottom_toTopOf="@+id/cardView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.508"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_capture"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteY="-1dp" />
+
+        <ImageView
+            android:layout_width="41dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="270dp"
+            android:layout_marginTop="130dp"
+            android:layout_marginBottom="50dp"
+            android:src="@drawable/pencil" />
+
+        <Button
+            android:id="@+id/event_cover"
+            android:layout_width="63dp"
+            android:layout_height="76dp"
+            android:layout_marginStart="270dp"
+            android:layout_marginTop="130dp"
+            android:background="#00FFFFFF"
+            android:onClick="captureImage"
+            android:text="."
+            android:textColor="@color/event_card"
+            android:textColorLink="#34FFFFFF" />
+
+    </androidx.cardview.widget.CardView>
 
     <ImageView
-        android:id="@+id/cover_image"
-        android:layout_width="103dp"
-        android:layout_height="84dp"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/text_margin"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/placeholder_view_vector"
-        android:textAppearance="?attr/textAppearanceListItem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="5dp" />
-
-    <EditText
-        android:id="@+id/idEdtEventName"
-        android:layout_width="300dp"
-        android:layout_height="20dp"
-        android:background="#9A8FAF"
-        android:hint="@string/Enter_Event_name"
-        android:imeActionLabel="@string/action_sign_in_short"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="16dp" />
-
-    <EditText
-        android:id="@+id/idEdtEventLocation"
-        android:layout_width="300dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="8dp"
-        android:background="#9A8FAF"
-        android:hint="@string/Enter_Event_location"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idEdtEventName" />
-
-    <EditText
-        android:id="@+id/idEdtEventDescription"
-        android:layout_width="300dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="8dp"
-        android:background="#9A8FAF"
-        android:hint="@string/Enter_Event_description"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idEdtEventDate" />
-
-    <EditText
-        android:id="@+id/idEdtEventDuration"
-        android:layout_width="300dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="8dp"
-        android:background="#9A8FAF"
-        android:hint="@string/Enter_Event_duration"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idEdtEventLocation" />
-
-    <EditText
-        android:id="@+id/idEdtEventCapacity"
-        android:layout_width="300dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="8dp"
-        android:background="#9A8FAF"
-        android:hint="@string/Enter_Event_capacity"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idEdtEventDuration" />
-
-    <EditText
-        android:id="@+id/idEdtEventDate"
-        android:layout_width="300dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="4dp"
-        android:background="#9A8FAF"
-        android:hint="@string/Enter_Event_date"
-        android:selectAllOnFocus="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.85"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idEdtEventCapacity" />
-
-    <Button
-        android:id="@+id/event_cover"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_gravity="end|bottom"
-        android:layout_marginEnd="524dp"
-        android:layout_marginBottom="4dp"
-        android:background="@drawable/add_photo"
-        android:backgroundTint="#FFA500"
-        app:layout_constraintBottom_toBottomOf="@id/cover_image"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <EditText
-        android:id="@+id/linkPaid"
-        android:layout_width="240dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="160dp"
-        android:background="#9A8FAF"
-        android:hint="Enter event link"
-        android:selectAllOnFocus="true"
-        android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-
-    <Button
-        android:id="@+id/idBtnSubmitEvent"
-        android:layout_width="133dp"
-        android:layout_height="39dp"
-        android:layout_marginBottom="112dp"
-        android:text="Create Event"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.758"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/idEdtEventDescription"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <CheckBox
-        android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="24dp"
-        android:text="Paid Event"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/idEdtEventDate"
+        android:layout_marginTop="7dp"
+        android:src="@drawable/rocket"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cover_image" />
+        app:layout_constraintTop_toBottomOf="@+id/cardViewImage" />
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="345dp"
+        android:layout_height="304dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="350dp"
+        android:layout_marginBottom="40dp"
+        app:cardBackgroundColor="@color/event_card"
+        app:cardCornerRadius="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="362dp"
+            android:paddingBottom="2dp">
+
+            <EditText
+                android:id="@+id/idEdtEventName"
+                android:layout_width="250dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="32dp"
+                android:background="#9A8FAF"
+                android:hint="@string/Enter_Event_name"
+                android:imeActionLabel="@string/action_sign_in_short"
+                android:paddingStart="10dp"
+                android:selectAllOnFocus="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="MissingConstraints" />
+
+            <EditText
+                android:id="@+id/idEdtEventLocation"
+                android:layout_width="250dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="4dp"
+                android:background="#9A8FAF"
+                android:hint="@string/Enter_Event_location"
+                android:paddingStart="10dp"
+                android:selectAllOnFocus="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.489"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idEdtEventName" />
+
+            <EditText
+                android:id="@+id/idEdtEventCapacity"
+                android:layout_width="250dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="4dp"
+                android:background="#9A8FAF"
+                android:hint="@string/Enter_Event_capacity"
+                android:paddingStart="10dp"
+                android:selectAllOnFocus="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idEdtEventDuration" />
+
+            <EditText
+                android:id="@+id/idEdtEventDuration"
+                android:layout_width="250dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="4dp"
+                android:background="#9A8FAF"
+                android:hint="@string/Enter_Event_duration"
+                android:paddingStart="10dp"
+                android:selectAllOnFocus="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.489"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idEdtEventLocation" />
+
+            <EditText
+                android:id="@+id/idEdtEventDate"
+                android:layout_width="250dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="4dp"
+                android:background="#9A8FAF"
+                android:hint="@string/Enter_Event_date"
+                android:paddingStart="10dp"
+                android:selectAllOnFocus="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.507"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idEdtEventCapacity" />
+
+            <EditText
+                android:id="@+id/idEdtEventDescription"
+                android:layout_width="250dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="4dp"
+                android:background="#9A8FAF"
+                android:hint="@string/Enter_Event_description"
+                android:paddingStart="10dp"
+                android:selectAllOnFocus="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.507"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idEdtEventDate" />
+
+
+            <EditText
+                android:id="@+id/linkPaid"
+                android:layout_width="250dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="4dp"
+                android:background="#9A8FAF"
+                android:hint="@string/event_link"
+                android:paddingStart="10dp"
+                android:selectAllOnFocus="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.492"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idEdtEventDescription" />
+
+            <Button
+                android:id="@+id/idBtnSubmitEvent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="44dp"
+                android:onClick="captureImage"
+                android:text="Create Event"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linkPaid"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:text="Paid Event"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/idBtnSubmitEvent"
+                app:layout_constraintHorizontal_bias="0.94"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linkPaid"
+                app:layout_constraintVertical_bias="0.0" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
