--- a/app/src/main/res/layout-land/fragment_events.xml
+++ b/app/src/main/res/layout-land/fragment_events.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".activities.AttendeeActivity">
+    tools:context=".activities.OrganiserActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -81,13 +81,13 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/rocket"
+                android:src="@drawable/white_bar_rocket"
                 app:layout_constraintBottom_toBottomOf="@+id/name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/name"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintVertical_bias="0.103" />
 
             <TextView
                 android:id="@+id/location"
@@ -134,18 +134,7 @@
                 app:layout_constraintStart_toEndOf="@id/time"
                 app:layout_constraintTop_toBottomOf="@+id/time" />
 
-            <Button
-                android:id="@+id/moreDetails"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:onClick="buttonPlease"
-                android:text="@string/more_details"
-                app:layout_constraintTop_toBottomOf="@+id/capacity"
-                tools:ignore="MissingConstraints" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     </androidx.cardview.widget.CardView>
 
