--- a/app/src/main/res/layout-land/fragment_profile_organiser.xml
+++ b/app/src/main/res/layout-land/fragment_profile_organiser.xml
@@ -10,9 +10,9 @@
 
     <ImageView
         android:id="@+id/imageViewOrganiserProfileImage"
-        android:layout_width="168dp"
-        android:layout_height="168dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/circle_background"
         android:clipToOutline="true"
         android:scaleType="centerCrop"
@@ -32,48 +32,84 @@
         app:layout_constraintEnd_toEndOf="@+id/imageViewOrganiserProfileImage"
         app:layout_constraintBottom_toBottomOf="@+id/imageViewOrganiserProfileImage" />
 
+    <TextView
+        android:id="@+id/usernameOrganiser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No username"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.153"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewOrganiserProfileImage"
+        app:layout_constraintVertical_bias="0.035" />
+
+    <TextView
+        android:id="@+id/descriptionOrganiser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="description"
+        android:textColor="#AFABAB"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.223"
+        app:layout_constraintStart_toEndOf="@+id/imageViewOrganiserProfileImage"
+        app:layout_constraintTop_toBottomOf="@+id/emailOrganiser"
+        app:layout_constraintVertical_bias="0.108" />
 
     <TextView
         android:id="@+id/emailOrganiser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="232dp"
         android:text="email@organiser.com"
         android:textColor="#AFABAB"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.717"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.544"
+        app:layout_constraintStart_toEndOf="@+id/imageViewOrganiserProfileImage"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.218" />
+        app:layout_constraintVertical_bias="0.231" />
+
+    <Button
+        android:id="@+id/openSettingsOrganiser"
+        android:layout_width="145dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="48dp"
+        android:text="Settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.773"
+        app:layout_constraintStart_toEndOf="@+id/imageViewOrganiserProfileImage"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/deleteAccountOrganiserBtn"
         android:layout_width="145dp"
         android:layout_height="48dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginBottom="108dp"
+        android:layout_marginBottom="60dp"
         android:backgroundTint="#EC4646"
         android:text="Delete account"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailOrganiser"
-        app:layout_constraintVertical_bias="0.661" />
+        app:layout_constraintHorizontal_bias="0.773"
+        app:layout_constraintStart_toEndOf="@+id/imageViewOrganiserProfileImage"
+        app:layout_constraintTop_toBottomOf="@+id/LOGOUTBUTTONORGANISER"
+        app:layout_constraintVertical_bias="0.057" />
 
     <Button
         android:id="@+id/LOGOUTBUTTONORGANISER"
         android:layout_width="145dp"
         android:layout_height="48dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="108dp"
-        android:text="Log out"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/deleteAccountOrganiserBtn"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageViewOrganiserProfileImage"
-        app:layout_constraintTop_toBottomOf="@+id/emailOrganiser"
-        app:layout_constraintVertical_bias="0.661" />
+        android:layout_marginTop="8dp"
+        android:text="Sign out"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.86"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/openSettingsOrganiser" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
