--- a/app/src/main/res/layout/activity_settings_attendee.xml
+++ b/app/src/main/res/layout/activity_settings_attendee.xml
@@ -38,7 +38,8 @@
             android:layout_marginTop="130dp"
             android:text="Edit Description"
             android:textColor="@color/white"
-            android:textSize="20sp"></TextView>
+            android:textSize="20sp">
+        </TextView>
 
         <EditText
             android:id="@+id/description_fieldAttendee"
@@ -50,7 +51,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:background="@color/white"
-            android:hint="Update Current Description"></EditText>
+            android:hint="Update Current Description">
+        </EditText>
 
         <TextView
             android:id="@+id/textViewNoti"
@@ -62,7 +64,8 @@
             android:layout_marginTop="39dp"
             android:text="Turn on Notifications"
             android:textColor="@color/white"
-            android:textSize="20sp"></TextView>
+            android:textSize="20sp">
+        </TextView>
 
         <ToggleButton
             android:id="@+id/noti_toggle"
