--- a/app/src/main/res/layout/maps.xml
+++ b/app/src/main/res/layout/maps.xml
@@ -44,5 +44,15 @@
 
     </androidx.fragment.app.FragmentContainerView>
 
+    <Button
+        android:id="@+id/get_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get current location"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/maps"
+        android:layout_marginTop="8dp"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
